--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-375.3KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-435.3KB/s(Youtube:不良林), server: 217.30.10.63, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 波兰-1.61MB/s(Youtube:不良林), server: 217.30.10.66, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-1.64MB/s(Youtube:不良林), server: 217.30.10.67, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 波兰-1.66MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 波兰-2.88MB/s(Youtube:不良林), server: 217.30.10.67, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 波兰-1.92MB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇳🇱 荷兰-1.33MB/s(Youtube:不良林), server: 213.183.59.177, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-3.29MB/s(Youtube:不良林), server: 213.183.59.206, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇨🇳 中国-6.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 38.121.43.71, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.88MB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-358.8KB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-375.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 波兰-435.3KB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 波兰-1.66MB/s(Youtube:不良林)
-      - 波兰-2.88MB/s(Youtube:不良林)
-      - 波兰-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-375.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 波兰-435.3KB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 波兰-1.66MB/s(Youtube:不良林)
-      - 波兰-2.88MB/s(Youtube:不良林)
-      - 波兰-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-375.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 波兰-435.3KB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 波兰-1.66MB/s(Youtube:不良林)
-      - 波兰-2.88MB/s(Youtube:不良林)
-      - 波兰-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-375.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 波兰-435.3KB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 波兰-1.66MB/s(Youtube:不良林)
-      - 波兰-2.88MB/s(Youtube:不良林)
-      - 波兰-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-375.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 波兰-435.3KB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 波兰-1.66MB/s(Youtube:不良林)
-      - 波兰-2.88MB/s(Youtube:不良林)
-      - 波兰-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-375.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 波兰-435.3KB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 波兰-1.66MB/s(Youtube:不良林)
-      - 波兰-2.88MB/s(Youtube:不良林)
-      - 波兰-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-375.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 波兰-435.3KB/s(Youtube:不良林)
-      - 波兰-1.61MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 波兰-1.66MB/s(Youtube:不良林)
-      - 波兰-2.88MB/s(Youtube:不良林)
-      - 波兰-1.92MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
