--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.33MB/s(Youtube:不良林), server: 213.183.59.177, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇳🇱 荷兰-3.29MB/s(Youtube:不良林), server: 213.183.59.206, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇨🇳 中国-6.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-2.54MB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 波兰-1.64MB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 38.121.43.71, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 波兰-2.54MB/s(Youtube:不良林)
+      - 波兰-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 波兰-2.54MB/s(Youtube:不良林)
+      - 波兰-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 波兰-2.54MB/s(Youtube:不良林)
+      - 波兰-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 波兰-2.54MB/s(Youtube:不良林)
+      - 波兰-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 波兰-2.54MB/s(Youtube:不良林)
+      - 波兰-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 波兰-2.54MB/s(Youtube:不良林)
+      - 波兰-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 波兰-2.54MB/s(Youtube:不良林)
+      - 波兰-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
