--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 波兰-2.54MB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 波兰-1.64MB/s(Youtube:不良林), server: 217.30.10.63, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 38.121.43.71, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.88MB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 波兰-2.21MB/s(Youtube:不良林), server: 217.30.10.67, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 波兰-1.19MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇨🇳 中国-317.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-227.5KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-358.8KB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 捷克-382.2KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林), server: 213.183.53.182, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
+  - {name: 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林), server: 213.183.53.182, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 波兰-2.21MB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 捷克-382.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 波兰-2.21MB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 捷克-382.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 波兰-2.21MB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 捷克-382.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 波兰-2.21MB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 捷克-382.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 波兰-2.21MB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 捷克-382.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 波兰-2.21MB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 捷克-382.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
       - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 波兰-2.21MB/s(Youtube:不良林)
+      - 波兰-1.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
+      - 捷克-382.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
