--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-2.54MB/s(Youtube:不良林), server: 217.30.10.65, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 波兰-2.21MB/s(Youtube:不良林), server: 217.30.10.67, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 波兰-1.19MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 波兰-3.00MB/s(Youtube:不良林), server: 217.30.10.67, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-187.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.29MB/s(Youtube:不良林), server: 213.183.59.206, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
   - {name: 🇨🇳 中国-317.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-227.5KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-358.8KB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 捷克-382.2KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林), server: 213.183.53.182, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
-  - {name: 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林), server: 213.183.53.182, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林), server: 213.183.53.208, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇳🇱 荷兰-977.1KB/s(Youtube:不良林), server: 213.183.59.177, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-1.30MB/s(Youtube:不良林), server: 213.183.59.229, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-2.21MB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 波兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 捷克-382.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-2.21MB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 波兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 捷克-382.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-2.21MB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 波兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 捷克-382.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-2.21MB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 波兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 捷克-382.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-2.21MB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 波兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 捷克-382.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-2.21MB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 波兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 捷克-382.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-2.54MB/s(Youtube:不良林)
-      - 波兰-2.21MB/s(Youtube:不良林)
-      - 波兰-1.19MB/s(Youtube:不良林)
+      - 波兰-3.00MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-358.8KB/s(Youtube:不良林)
-      - 捷克-382.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.76MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.88MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-977.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
