--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-3.00MB/s(Youtube:不良林), server: 217.30.10.67, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇳🇱 荷兰-187.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.29MB/s(Youtube:不良林), server: 213.183.59.206, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇨🇳 中国-317.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.34MB/s(Youtube:不良林), server: 213.183.59.177, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-1.18MB/s(Youtube:不良林), server: 217.30.10.66, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 波兰-1.43MB/s(Youtube:不良林), server: 217.30.10.67, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
   - {name: 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林), server: 213.183.53.208, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
   - {name: 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林), server: 213.183.53.208, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-3.00MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-187.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 波兰-1.18MB/s(Youtube:不良林)
+      - 波兰-1.43MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-3.45MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
